# ProofPay

Downloads/ecotrack (1)/ecotrack/: README.md  app.py  database.sql  init_db.py
Downloads/ecotrack (1)/ecotrack/static/css/: style.css
Downloads/ecotrack (1)/ecotrack/static/js/: main.js
Downloads/ecotrack (1)/ecotrack/templates/: 404.html  activity_feed.html  activity_participants.html  admin_activities.html  admin_activity_posts.html  admin_announcements.html  admin_dashboard.html  admin_report.html  admin_search.html  admin_users.html  base.html  landing.html  login.html  new_activity.html  new_report.html  profile.html  register.html  user_dashboard.html  view_activity_feed.html  view_report.html
OneDrive/Desktop/ProofPay/frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
OneDrive/Desktop/ProofPay/frontend/components/: Header.tsx  JobCard.tsx  JobForm.tsx  LoginForm.tsx
OneDrive/Desktop/ProofPay/frontend/lib/: contract.ts
OneDrive/Desktop/ProofPay/frontend/pages/: _app.tsx  _document.tsx  create-job.tsx  dashboard.tsx  index.tsx  login.tsx
OneDrive/Desktop/ProofPay/frontend/pages/api/: jobs.ts
OneDrive/Desktop/ProofPay/frontend/pages/jobs/: [id].tsx  index.tsx
OneDrive/Desktop/ProofPay/frontend/store/: useAppStore.ts
OneDrive/Desktop/ProofPay/frontend/styles/: globals.css
OneDrive/Desktop/ProofPay/proofpay/: .gitignore  README.md
OneDrive/Desktop/ProofPay/proofpay/src/: test.rs
ProofPay/ProofPay/: Cargo.toml
ProofPay/ProofPay/src/: lib.rs
